[resolver] Use resources for fileSystem resolver